# ocipfs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: ci.yml
example/: Dockerfile  layer.json
src/: lib.rs  main.rs  oci.rs
