[package]
name = "ocipfs"
version = "0.1.0"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
text_io = "0.1"
anyhow = "1"
err-derive = "0.3"
reqwest = { version = "0.11", features = [ "blocking" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
generic-array = "0.14"
count-write = "0.1"
[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]